# spec/openapi.yaml
@@ -4,7 +4,7 @@ info:
   version: 1.0
 
 paths:
-  /offers:
+  /offer:
     get:
       tags:
         - Offers
@@ -40,12 +40,19 @@ paths:
         - Offers
       summary: Creates a new offer
       description: Creates a new offer and returns offer model.
+      parameters:
+        - name: Authorization
+          in: header
+          description: Authorization token
+          required: true
+          schema:
+            type: string
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Offer'
+              $ref: '#/components/schemas/CreateOffer'
       responses:
         201:
           description: Offer created successfully
@@ -58,7 +65,7 @@ paths:
         401:
           description: Unauthorized
 
-  /offers/{offerId}:
+  /offer/{offerId}:
     parameters:
       - name: offerId
         in: path
@@ -80,39 +87,49 @@ paths:
                 $ref: '#/components/schemas/Offer'
         404:
           description: Offer not found
-        401:
-          description: Unauthorized
 
     put:
       tags:
         - Offers
       summary: Update an offer by ID
       description: Update an offer by its unique ID.
+      parameters:
+        - name: Authorization
+          in: header
+          description: Authorization token
+          required: true
+          schema:
+            type: string
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Offer'
+              $ref: '#/components/schemas/CreateOffer'
       responses:
-        200:
+        204:
           description: Offer updated successfully
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Offer'
         404:
           description: Offer not found
         400:
           description: Validation Error
         401:
           description: Unauthorized
+        403:
+          description: Not enough access rights
 
     delete:
       tags:
         - Offers
       summary: Delete an offer by ID
       description: Delete an offer by its unique ID.
+      parameters:
+        - name: Authorization
+          in: header
+          description: Authorization token
+          required: true
+          schema:
+            type: string
       responses:
         204:
           description: Offer deleted successfully
@@ -120,8 +137,10 @@ paths:
           description: Offer not found
         401:
           description: Unauthorized
+        403:
+          description: Not enough access rights
 
-  /offers/{offerId}/comments:
+  /comment/{OfferId}:
     get:
       tags:
         - Comments
@@ -156,18 +175,17 @@ paths:
                   $ref: '#/components/schemas/Comment'
         404:
           description: Offer not found
-        401:
-          description: Unauthorized
 
+  /comment:
     post:
       tags:
-        - Favourites
+        - Comments
       summary: Create a new comment for an offer
       parameters:
-        - name: offerId
-          in: path
+        - name: Authorization
+          in: header
+          description: Authorization token
           required: true
-          description: The ID of the offer to create a comment for
           schema:
             type: string
       requestBody:
@@ -175,7 +193,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Comment'
+              $ref: '#/components/schemas/CreateComment'
       responses:
         201:
           description: Comment created successfully
@@ -188,7 +206,7 @@ paths:
         401:
           description: Unauthorized
 
-  /offers/{offerId}/favorites:
+  /user/favourite/{offerId}:
     post:
       tags:
         - Favourites
@@ -201,8 +219,14 @@ paths:
           description: The ID of the offer to add to favorites
           schema:
             type: string
+        - name: Authorization
+          in: header
+          description: Authorization token
+          required: true
+          schema:
+            type: string
       responses:
-        201:
+        204:
           description: Offer added to favorites successfully
         404:
           description: Offer not found
@@ -211,7 +235,7 @@ paths:
 
     delete:
       tags:
-        - Offers
+        - Favourites
       summary: Remove an offer from favorites
       description: Remove an offer from the user's list of favorites.
       parameters:
@@ -219,6 +243,12 @@ paths:
           in: path
           required: true
           description: The ID of the offer to remove from favorites
+          schema:
+            type: string
+        - name: Authorization
+          in: header
+          description: Authorization token
+          required: true
           schema:
             type: string
       responses:
@@ -229,11 +259,56 @@ paths:
         401:
           description: Unauthorized
 
-  /user:
+  /user/favourite:
+    get:
+      tags:
+        - Favourites
+      summary: Get list of favourite offers
+      parameters:
+        - name: Authorization
+          in: header
+          description: Authorization token
+          required: true
+          schema:
+            type: string
+      responses:
+        201:
+          description: Offer added to favorites successfully
+        401:
+          description: Unauthorized
+
+  /user/avatar:
+    post:
+      tags:
+        - Users
+      summary: Upload avatar
+      parameters:
+        - name: Authorization
+          in: header
+          description: Authorization token
+          required: true
+          schema:
+            type: string
+      responses:
+        201:
+          description: Avatar uploaded
+        400:
+          description: Bad file
+        401:
+          description: Unauthorized
+
+  /user/me:
     get:
       tags:
         - Users
       summary: Gets the current user
+      parameters:
+        - name: Authorization
+          in: header
+          description: Authorization token
+          required: true
+          schema:
+            type: string
       responses:
         200:
           description: Successful response
@@ -264,20 +339,25 @@ paths:
                 - email
                 - password
       responses:
-        200:
-          description: User logged in successfully
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/User'
+        204:
+          description: User logged in successfully. Returns `Authorization` header with token
         400:
           description: Validation Error
+        401:
+          description: Unauthorized
 
   /user/logout:
     post:
       tags:
         - Users
       summary: Logout the current user
+      parameters:
+        - name: Authorization
+          in: header
+          description: Authorization token
+          required: true
+          schema:
+            type: string
       responses:
         204:
           description: User logged out successfully
@@ -294,23 +374,7 @@ paths:
         content:
           application/json:
             schema:
-              type: object
-              properties:
-                name:
-                  type: string
-                email:
-                  type: string
-                avatar:
-                  type: string
-                password:
-                  type: string
-                type:
-                  $ref: '#/components/schemas/UserType'
-              required:
-                - name
-                - email
-                - password
-                - type
+              $ref: '#/components/schemas/CreateUser'
       responses:
         201:
           description: User registered successfully
@@ -386,7 +450,9 @@ components:
     User:
       type: object
       properties:
-        name:
+        id:
+          type: string
+        username:
           type: string
         email:
           type: string
@@ -395,7 +461,8 @@ components:
         type:
           $ref: '#/components/schemas/UserType'
       required:
-        - name
+        - id
+        - username
         - email
         - type
 
@@ -404,6 +471,94 @@ components:
       properties:
         id:
           type: string
+        title:
+          type: string
+        description:
+          type: string
+        date:
+          type: string
+          format: date-time
+        city:
+          $ref: '#/components/schemas/City'
+        preview:
+          type: string
+        images:
+          type: array
+          items:
+            type: string
+        isPremium:
+          type: boolean
+        isFavourite:
+          type: boolean
+        rating:
+          type: number
+        housingType:
+          $ref: '#/components/schemas/HousingType'
+        roomCount:
+          type: number
+        guestCount:
+          type: number
+        cost:
+          type: number
+        facilities:
+          type: array
+          items:
+            $ref: '#/components/schemas/Facilities'
+        authorId:
+          type: string
+        commentsCount:
+          type: number
+        commentsTotalRating:
+          type: number
+        coordinates:
+          $ref: '#/components/schemas/Coordinates'
+      required:
+        - id
+        - title
+        - description
+        - publicationDate
+        - city
+        - preview
+        - images
+        - isPremium
+        - isFavourite
+        - rating
+        - housingType
+        - roomCount
+        - guestCount
+        - cost
+        - facilities
+        - author
+        - commentsCount
+        - coordinates
+
+    Comment:
+      type: object
+      properties:
+        id:
+          type: string
+        text:
+          type: string
+        date:
+          type: string
+          format: date-time
+        offerId:
+          type: string
+        rating:
+          type: number
+        userId:
+          type: string
+      required:
+        - id
+        - text
+        - date
+        - offerId
+        - rating
+        - userId
+
+    CreateOffer:
+      type: object
+      properties:
         title:
           type: string
         description:
@@ -464,20 +619,37 @@ components:
         - commentsCount
         - coordinates
 
-    Comment:
+
+    CreateUser:
+      type: object
+      properties:
+        username:
+          type: string
+        email:
+          type: string
+        avatar:
+          type: string
+        type:
+          $ref: '#/components/schemas/UserType'
+      required:
+        - username
+        - email
+        - type
+
+    CreateComment:
       type: object
       properties:
         text:
           type: string
-        publicationDate:
+        date:
           type: string
           format: date-time
+        offerId:
+          type: string
         rating:
           type: number
-        author:
-          $ref: '#/components/schemas/User'
       required:
         - text
-        - publicationDate
+        - date
+        - offerId
         - rating
-        - author
